update (dependencies) to 1.21 and Java 21 - please note: our tests are even more broken, since MockBukkit is not up-to-date yet.